[fix] #177 앱 소셜 로그인 redirect 처리 수정