@@ -1,16 +1,23 @@
 package com.chaewookim.accountbookformoms.global.security.oauth2;
 
 import com.chaewookim.accountbookformoms.global.util.CookieUtils;
+import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.oauth2.client.web.AuthorizationRequestRepository;
 import org.springframework.security.oauth2.core.endpoint.OAuth2AuthorizationRequest;
 import org.springframework.stereotype.Component;
 
+import java.util.HashMap;
+import java.util.Map;
+
 @Component
 public class HttpCookieOAuth2AuthorizationRequestRepository implements AuthorizationRequestRepository<OAuth2AuthorizationRequest> {
+
+    public static final String POST_LOGIN_REDIRECT_PARAM = "post_login_redirect";
     public static final String OAUTH2_AUTHORIZATION_REQUEST_COOKIE_NAME = "oauth2_auth_request";
-    public static final String REDIRECT_URI_PARAM_COOKIE_NAME = "redirect_uri";
+    public static final String POST_LOGIN_REDIRECT_COOKIE = "post_login_redirect";
+
     private static final int cookieExpireSeconds = 180;
 
     @Override
@@ -24,15 +31,31 @@ public class HttpCookieOAuth2AuthorizationRequestRepository implements Authoriza
     public void saveAuthorizationRequest(OAuth2AuthorizationRequest authorizationRequest, HttpServletRequest request, HttpServletResponse response) {
         if (authorizationRequest == null) {
             CookieUtils.deleteCookie(request, response, OAUTH2_AUTHORIZATION_REQUEST_COOKIE_NAME);
-            CookieUtils.deleteCookie(request, response, REDIRECT_URI_PARAM_COOKIE_NAME);
+            CookieUtils.deleteCookie(request, response, POST_LOGIN_REDIRECT_COOKIE);
+            CookieUtils.deleteCookie(request, response, "redirect_uri");
             return;
         }
 
-        CookieUtils.addCookie(response, OAUTH2_AUTHORIZATION_REQUEST_COOKIE_NAME, CookieUtils.serialize(authorizationRequest), cookieExpireSeconds);
-        String redirectUriAfterLogin = request.getParameter(REDIRECT_URI_PARAM_COOKIE_NAME);
-        if (redirectUriAfterLogin != null && !redirectUriAfterLogin.trim().isEmpty()) {
-            CookieUtils.addCookie(response, REDIRECT_URI_PARAM_COOKIE_NAME, redirectUriAfterLogin, cookieExpireSeconds);
+        CookieUtils.deleteCookie(request, response, "redirect_uri");
+
+        String redirectUriAfterLogin = request.getParameter(POST_LOGIN_REDIRECT_PARAM);
+        OAuth2AuthorizationRequest toSave = authorizationRequest;
+
+        if (redirectUriAfterLogin != null && !redirectUriAfterLogin.isBlank()) {
+            Map<String, Object> additionalParameters = new HashMap<>(authorizationRequest.getAdditionalParameters());
+            additionalParameters.put(POST_LOGIN_REDIRECT_COOKIE, redirectUriAfterLogin);
+            toSave = OAuth2AuthorizationRequest.from(authorizationRequest)
+                    .additionalParameters(additionalParameters)
+                    .build();
+            CookieUtils.addCookie(response, POST_LOGIN_REDIRECT_COOKIE, redirectUriAfterLogin, cookieExpireSeconds);
         }
+
+        CookieUtils.addCookie(
+                response,
+                OAUTH2_AUTHORIZATION_REQUEST_COOKIE_NAME,
+                CookieUtils.serialize(toSave),
+                cookieExpireSeconds
+        );
     }
 
     @Override
@@ -42,6 +65,29 @@ public class HttpCookieOAuth2AuthorizationRequestRepository implements Authoriza
 
     public void removeAuthorizationRequestCookies(HttpServletRequest request, HttpServletResponse response) {
         CookieUtils.deleteCookie(request, response, OAUTH2_AUTHORIZATION_REQUEST_COOKIE_NAME);
-        CookieUtils.deleteCookie(request, response, REDIRECT_URI_PARAM_COOKIE_NAME);
+        CookieUtils.deleteCookie(request, response, POST_LOGIN_REDIRECT_COOKIE);
+        CookieUtils.deleteCookie(request, response, "redirect_uri");
+    }
+
+    public String resolveRedirectUriAfterLogin(HttpServletRequest request) {
+        String fromCookie = CookieUtils.getCookie(request, POST_LOGIN_REDIRECT_COOKIE)
+                .map(Cookie::getValue)
+                .filter(value -> !value.isBlank())
+                .orElse(null);
+        if (fromCookie != null) {
+            return fromCookie;
+        }
+
+        OAuth2AuthorizationRequest authorizationRequest = loadAuthorizationRequest(request);
+        if (authorizationRequest == null) {
+            return null;
+        }
+
+        Object embedded = authorizationRequest.getAdditionalParameters().get(POST_LOGIN_REDIRECT_COOKIE);
+        if (embedded == null) {
+            return null;
+        }
+        String value = embedded.toString();
+        return value.isBlank() ? null : value;
     }
 }
